[package]
name = "some_login_page"
version = "0.1.0"
authors = ["kylepo99"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
actix-http = "2.1.0"
rust-argon2 = "0.8.2"
rand = "0.7.3"
postgres = "0.18.1"
derive_more = "0.99.11"
